--- a/assets/starsBackground/starsBackground.css
+++ b/assets/starsBackground/starsBackground.css
@@ -1,6 +1,7 @@
 body {
   width: 100%;
   height: 100vh;
+  overflow-y: hidden;
   background-color: #000;
   background-image: radial-gradient(circle at top right, rgba(121, 68, 154, 0.13), transparent), radial-gradient(circle at bottom left, rgba(41, 196, 255, 0.13), transparent);
 }
