--- a/assets/starsBackground/starsBackground.css
+++ b/assets/starsBackground/starsBackground.css
@@ -1,9 +1,8 @@
 body {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
   background-color: #000;
-  background-image: radial-gradient(circle at top right, rgba(121, 68, 154, 0.13), transparent), radial-gradient(circle at bottom left, rgba(41, 196, 255, 0.13), transparent);
 }
 
 canvas {
@@ -13,12 +12,5 @@ canvas {
   z-index: -100;
   width: 100%;
   height: 100%;
-}
-
-a {
-  position: absolute;
-  bottom: 2vmin;
-  right: 2vmin;
-  color: rgba(255, 255, 255, 0.2);
-  text-decoration: none;
+  background-image: radial-gradient(circle at top right, rgba(121, 68, 154, 0.13), transparent), radial-gradient(circle at bottom left, rgba(41, 196, 255, 0.13), transparent);
 }
